--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ src/__pycache__/
 src/.idea/
 src/analysis/popular-locations/output-data/*
 src/analysis/popular-locations/__pycache__/
+src/analysis/displacements/output-data/*
+src/analysis/displacements/__pycache__/
+
